fixed get recipes by author
