# server/docs/swagger.yaml
@@ -36,6 +36,26 @@ info:
   title: Recipes API
   version: "0.1"
 paths:
+  /account/{login}/recipes:
+    get:
+      parameters:
+      - description: Category title
+        in: path
+        name: login
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/objects.RecipeDTO'
+            type: array
+      summary: Retrieves recipes of user
+      tags:
+      - Recipes
   /accounts/login:
     post:
       parameters:
@@ -119,6 +139,7 @@ paths:
       - description: Recipe data
         in: body
         name: recipe
+        required: true
         schema:
           $ref: '#/definitions/objects.RecipeDTO'
       produces:
